(This file, NEWS, lists new features and enhancements. See CHANGES for fixes.)

2.4

  * New AtomicUndo command groups changes to be undone/redone as a group
    instead of individually.

2.3

  * Takes 'SEQ "sequence" KEYCODE' in ~/.ne/.keys to bind character
    sequences to key codes.

2.2

  * Now ne is distributed under the GPLv3.

  * Added AutoMatchBracket mode to indicate visible matching of
    {}, (), [], <> pairs. Mode is 1 (brightness) by default.

  * Bookmarks now remember/restore their vertical offsets in the window.

  * Bookmark commands take -1/+1 to cycle through your bookmarks;
    Use "UnsetBookmark *" to unset all bookmarks.

  * New --binary command line option loads next listed file in binary mode.
    May appear multiple times on the command line.

  * +[N[,M]] command line option moves to N-th line, M-th column of next file loaded.
    May appear multiple times on the command line.

  * Mention http://groups.google.com/group/niceeditor in splash screen.

  * About now displays splash screen in addition to its status bar message.

  * In FastGUI mode, when highlighting menu items the cursor is now
    positioned on the border of the menu rather than on the first letter
    of menu items.

  * New "tabs" syntax definition makes tabs visibly distinct from spaces.

  * Recognize C99 integer types from <stdint.h> and highlight accordingly.

2.1

  * New commands: KeyCode, DeleteNextWord, DeletePrevWord, AutoComplete,
    InsertTab, Tabs, RequestOrder.

  * Now we set the syntax when a file is saved with a (different) name.

  * Now we correctly highlight control characters in the command line.

  * Display request lists by columns ("RequestOrder 1") or rows ("RequestOrder 0").

  * Allow window resizing during requests (file selection, help, AutoComplete).

  * Sort filenames in dictionary order ("aa", "Ab", "ac", ...).

  * Enter in Help places you on the right command in the command list.
